@@ -1,6 +1,6 @@
 /* tc-hppa.c -- Assemble for the PA
    Copyright 1989, 1993, 1994, 1995, 1996, 1997, 1998, 1999, 2000, 2001, 2002,
-   2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010, 2012
+   2003, 2004, 2005, 2006, 2007, 2008, 2009, 2010
    Free Software Foundation, Inc.
 
    This file is part of GAS, the GNU Assembler.
@@ -2207,7 +2207,7 @@ pa_parse_number (char **s, int is_float)
 		 register, so...  */
 	      have_prefix = TRUE;
 	    }
-	  else if (S_GET_SEGMENT (sym) == bfd_abs_section_ptr)
+	  else if (S_GET_SEGMENT (sym) == &bfd_abs_section)
 	    num = S_GET_VALUE (sym);
 	  else if (!strict)
 	    {
@@ -2552,54 +2552,50 @@ pa_get_absolute_expression (struct pa_it *insn, char **strp)
   save_in = input_line_pointer;
   input_line_pointer = *strp;
   expression (&insn->exp);
-  expr_end = input_line_pointer;
-  input_line_pointer = save_in;
-  if (insn->exp.X_op != O_constant)
+  /* This is not perfect, but is a huge improvement over doing nothing.
+
+     The PA assembly syntax is ambiguous in a variety of ways.  Consider
+     this string "4 %r5"  Is that the number 4 followed by the register
+     r5, or is that 4 MOD r5?
+
+     If we get a modulo expression when looking for an absolute, we try
+     again cutting off the input string at the first whitespace character.  */
+  if (insn->exp.X_op == O_modulus)
     {
-      /* We have a non-match in strict mode.  */
-      if (!strict)
-	as_bad (_("Bad segment (should be absolute)."));
+      char *s, c;
+
+      input_line_pointer = *strp;
+      s = *strp;
+      while (*s != ',' && *s != ' ' && *s != '\t')
+	s++;
+
+      c = *s;
+      *s = 0;
+
+      pa_get_absolute_expression (insn, strp);
+
+      input_line_pointer = save_in;
+      *s = c;
+      return evaluate_absolute (insn);
+    }
+  /* When in strict mode we have a non-match, fix up the pointers
+     and return to our caller.  */
+  if (insn->exp.X_op != O_constant && strict)
+    {
+      expr_end = input_line_pointer;
+      input_line_pointer = save_in;
       return 0;
     }
-  return evaluate_absolute (insn);
-}
-
-/* Get an absolute number.  The input string is terminated at the
-   first whitespace character.  */
-
-static int
-pa_get_number (struct pa_it *insn, char **strp)
-{
-  char *save_in;
-  char *s, c;
-  int result;
-
-  save_in = input_line_pointer;
-  input_line_pointer = *strp;
-
-  /* The PA assembly syntax is ambiguous in a variety of ways.  Consider
-     this string "4 %r5"  Is that the number 4 followed by the register
-     r5, or is that 4 MOD r5?  This situation occurs for example in the
-     coprocessor load and store instructions.  Previously, calling
-     pa_get_absolute_expression directly results in r5 being entered
-     in the symbol table.
-
-     So, when looking for an absolute number, we cut off the input string
-     at the first whitespace character.  Thus, expressions should generally
-     contain no whitespace.  */
-
-  s = *strp;
-  while (*s != ',' && *s != ' ' && *s != '\t')
-    s++;
-
-  c = *s;
-  *s = 0;
-
-  result = pa_get_absolute_expression (insn, strp);
-
+  if (insn->exp.X_op != O_constant)
+    {
+      as_bad (_("Bad segment (should be absolute)."));
+      expr_end = input_line_pointer;
+      input_line_pointer = save_in;
+      return 0;
+    }
+  expr_end = input_line_pointer;
   input_line_pointer = save_in;
-  *s = c;
-  return result;
+  return evaluate_absolute (insn);
 }
 
 /* Given an argument location specification return the associated
@@ -4435,7 +4431,6 @@ pa_ip (char *str)
 		    flag = 0;
 		    if (*s == ',')
 		      {
-			int uxor;
 			s++;
 
 			/* 64 bit conditions.  */
@@ -4449,9 +4444,6 @@ pa_ip (char *str)
 			else if (*s == '*')
 			  break;
 
-			/* The uxor instruction only supports unit conditions
-			   not involving carries.  */
-			uxor = (opcode & 0xfc000fc0) == 0x08000380;
 			if (strncasecmp (s, "sbz", 3) == 0)
 			  {
 			    cmpltr = 2;
@@ -4462,17 +4454,17 @@ pa_ip (char *str)
 			    cmpltr = 3;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "sdc", 3) == 0)
+			else if (strncasecmp (s, "sdc", 3) == 0)
 			  {
 			    cmpltr = 4;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "sbc", 3) == 0)
+			else if (strncasecmp (s, "sbc", 3) == 0)
 			  {
 			    cmpltr = 6;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "shc", 3) == 0)
+			else if (strncasecmp (s, "shc", 3) == 0)
 			  {
 			    cmpltr = 7;
 			    s += 3;
@@ -4495,19 +4487,19 @@ pa_ip (char *str)
 			    flag = 1;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "ndc", 3) == 0)
+			else if (strncasecmp (s, "ndc", 3) == 0)
 			  {
 			    cmpltr = 4;
 			    flag = 1;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "nbc", 3) == 0)
+			else if (strncasecmp (s, "nbc", 3) == 0)
 			  {
 			    cmpltr = 6;
 			    flag = 1;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "nhc", 3) == 0)
+			else if (strncasecmp (s, "nhc", 3) == 0)
 			  {
 			    cmpltr = 7;
 			    flag = 1;
@@ -4519,7 +4511,7 @@ pa_ip (char *str)
 			    flag = 0;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "swc", 3) == 0)
+			else if (strncasecmp (s, "swc", 3) == 0)
 			  {
 			    cmpltr = 5;
 			    flag = 0;
@@ -4531,7 +4523,7 @@ pa_ip (char *str)
 			    flag = 1;
 			    s += 3;
 			  }
-			else if (!uxor && strncasecmp (s, "nwc", 3) == 0)
+			else if (strncasecmp (s, "nwc", 3) == 0)
 			  {
 			    cmpltr = 5;
 			    flag = 1;
@@ -5296,7 +5288,7 @@ pa_ip (char *str)
 	    case 'v':
 	      if (*s++ != ',')
 		as_bad (_("Invalid SFU identifier"));
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5305,7 +5297,7 @@ pa_ip (char *str)
 
 	    /* Handle a 20 bit SOP field for spop0.  */
 	    case 'O':
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5315,7 +5307,7 @@ pa_ip (char *str)
 
 	    /* Handle a 15bit SOP field for spop1.  */
 	    case 'o':
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5324,7 +5316,7 @@ pa_ip (char *str)
 
 	    /* Handle a 10bit SOP field for spop3.  */
 	    case '0':
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5334,7 +5326,7 @@ pa_ip (char *str)
 
 	    /* Handle a 15 bit SOP field for spop2.  */
 	    case '1':
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5346,7 +5338,7 @@ pa_ip (char *str)
 	    case 'u':
 	      if (*s++ != ',')
 		as_bad (_("Invalid COPR identifier"));
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5355,7 +5347,7 @@ pa_ip (char *str)
 
 	    /* Handle a 22bit SOP field for copr.  */
 	    case '2':
-	      num = pa_get_number (&the_insn, &s);
+	      num = pa_get_absolute_expression (&the_insn, &s);
 	      if (strict && the_insn.exp.X_op != O_constant)
 		break;
 	      s = expr_end;
@@ -5486,10 +5478,7 @@ pa_ip (char *str)
 		case 't':
 		  if (!pa_parse_number (&s, 3))
 		    break;
-		  /* RSEL should not be set.  */
-		  if (pa_number & FP_REG_RSEL)
-		    break;
-		  num = pa_number - FP_REG_BASE;
+		  num = (pa_number & ~FP_REG_RSEL) - FP_REG_BASE;
 		  CHECK_FIELD (num, 31, 0, 0);
 		  INSERT_FIELD_AND_CONTINUE (opcode, num, 0);
 
