@@ -1,3 +1,14 @@
+2011-03-14  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	Backport from mainline:
+	2010-12-26  John David Anglin  <dave.anglin@nrc-cnrc.gc.ca>
+
+	PR gas/11395
+	* config/tc-hppa.c (pa_ip): Set doubleword carry/borrow bit when a
+	doubleword completer or doubleword condition is found in an add/sub
+	instruction.  Reject match for 'A'/'S' only if there is no condition
+	and d bit is not set.
+
 2011-02-28  Alan Modra  <amodra@gmail.com>
 
 	* symbols.c (report_op_error): Remove unnecessary forward declaration.
